--- a/src/sass/page/_backstage.scss
+++ b/src/sass/page/_backstage.scss
@@ -108,6 +108,9 @@
       &.backstage-grid_info2{
         grid-template-columns: 10% 20% 16% 10% 12% 12% 20%;
       }
+      &.backstage-grid_info3{
+        grid-template-columns: 10% 30% 20% 15% 25%; 
+      }
       &.title{
         li{
         align-items: center;
