--- a/src/sass/page/_backstage.scss
+++ b/src/sass/page/_backstage.scss
@@ -108,6 +108,9 @@
       &.backstage-grid_info2{
         grid-template-columns: 10% 20% 16% 10% 12% 12% 20%;
       }
+      &.backstage-grid_expo1{
+        grid-template-columns: 10% 30% 30% 15% 15%;
+      }
       &.title{
         li{
         align-items: center;
@@ -129,11 +132,14 @@
     .backstage_btn_td{
       align-self: center;
       display: flex;
-    //     white-space: nowrap;;
-    //     .switch_flex{
-    //         display: flex;
-    //         padding-left:0;
-    //     }
+      &.switch_flex{
+        white-space: nowrap;
+        padding-left:0;
+        .custom-control-input:checked~.custom-control-label::before{
+          border-color: $backmain-color;
+          background-color: $backmain-color;
+        }
+      }
     }
 // =====所有按鈕外觀=====
   .backstage_btn{
@@ -260,12 +266,13 @@
         @include flex-box-center(80%, space-between);
         flex-wrap: wrap;
         margin: 0 auto;
+        color: $black-color;
         // 小標題
         label {
           font-size: 16px;
           padding-left: 6px;
           text-align: left;
-          color: $black-color;
+          
           margin-bottom: 6px;
         }
         li {
@@ -278,25 +285,46 @@
           color: $black-color;
           @include font(16px, 300, left, 1.6);
         }
-      }
-        // 文字方塊
-        textarea {
-          padding: 16px;
-          resize: none;
-          @include font(16px, 300, left, 1.6);
-        }
-        
-        // 只佔一半
-        .input-short {
-          width: 40%;
-          @include pad(768px) {
-            width: 100%;
+        // 攤位圖片
+        &.backstage_extend{
+          width: 100%;
+          flex-direction: row;
+          justify-content: space-around;
+          div{
+            width: 33%;
+            img{
+              min-height: 60px;
+              max-height: 120px;
+            }
           }
         }
-        // 佔整行
-        .input-long {
+      }
+      // 文字方塊
+      textarea {
+        padding: 16px;
+        min-height: 180px;
+        resize: none;
+        @include font(16px, 300, left, 1.6);
+        &::-webkit-scrollbar{
+          width: 3px;
+        }
+        &::-webkit-scrollbar-thumb{
+            box-shadow: inset 0 0 5px grey;
+            border-radius: 5px; 
+        }
+      }
+        
+        // 只佔一半
+      .input-short {
+        width: 40%;
+        @include pad(768px) {
           width: 100%;
         }
+      }
+      // 佔整行
+      .input-long {
+        width: 100%;
+      }
       }
       // 檔案上傳的需要另外分出來，不要包在ul
       .input-file {
