feat:調整js檔案template的結構/調整scss的grid%數/新增typography的word-break class/刪除update中的MODIFY_DATE

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -236,3 +236,7 @@ a {
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px  $accent-color;
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px  $accent-color;
 }
+// 強制換行
+.-word_break{
+  word-break: break-all;
+}
