feat:新增後台info2的select功能

--- a/src/sass/page/_backstage.scss
+++ b/src/sass/page/_backstage.scss
@@ -106,7 +106,7 @@
       grid-template-columns: 10% 30% 20% 15% 25%;
     }
     &.backstage-grid_info2{
-      grid-template-columns: 10% 20% 16% 10% 12% 12% 20%;
+      grid-template-columns: 10% 25% 17% 14% 14% 20%;
     }
     &.backstage-grid_info3{
       grid-template-columns: 10% 30% 20% 15% 25%; 
