--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -19,7 +19,7 @@
       </ul>
     </div>
     <ul class="menu">
-      <li class="nav-company"><a href="companyback.html" class="accent-color">管理後台</a>
+      <li class="nav-company"><a href="companyback_info.html" class="accent-color">管理後台</a>
         <img class="now_page menu_img_back -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
       </li>
       <li><a href="extend.html" >虛擬商展</a>
@@ -44,7 +44,7 @@
     </ul>
     <ul class="company-menu" id="company_menu">
       <li id="companyBack_info"><a href="companyback_info.html"><img src="img/c_back/company_menu_1.svg" alt="廠商資料設定區"></a></li>
-      <li id="companyBack_live"><a href="companyback_live.html"><img src="img/c_back/company_menu_2.svg" alt="技術展示區"></a></li>
+      <li id="companyBack_tech"><a href="companyback_tech.html"><img src="img/c_back/company_menu_2.svg" alt="技術展示區"></a></li>
       <li id="companyBack"><a href="companyback.html"><img src="img/c_back/company_menu_3.svg" alt="直播申請區"></a></li>
     </ul>
     <div id="menu-backdrop"></div>
