--- a/src/sass/page/_extend.scss
+++ b/src/sass/page/_extend.scss
@@ -10,6 +10,9 @@
             max-height: 91.15px;
         }
     }
+    .swiper-slide-thumb-active{
+        border: 3px solid $main-color;
+    }
     h1.cblook_top{
         width: 100%;
     }
@@ -32,6 +35,7 @@
             @include flex-box(33%,flex-start,center);
             height: calc(7.5vw - 1px);
             max-height: 90px;
+            background-color: $second-color;
             @media screen and (max-width: $md_bkpoint) {
                 flex-wrap: nowrap;
             }
@@ -44,6 +48,9 @@
                     line-height: 1.5;
                 }
             }
+        }
+        article>img{
+            opacity: .4;
         }
         .extend_booth1{
             @include relative();
