--- a/src/sass/page/_live.scss
+++ b/src/sass/page/_live.scss
@@ -177,6 +177,7 @@
           border-radius: 5px;
           width: 75%;
           margin-bottom: 0;
+          height: 50px;
         }
         .-live-text-input-hide {
           display: none;
