--- a/src/sass/page/_c_back_info.scss
+++ b/src/sass/page/_c_back_info.scss
@@ -89,25 +89,29 @@
         display: grid;
         grid-template-columns: 2.9fr 1fr;
         grid-gap: 5%;
-
         .company_logo {
             height: 257px;
             min-width: 256px;
             background-color: rgba(196, 196, 196, 0.1);
             box-shadow: 0px 4px 4px rgba(87, 255, 245, 0.25);
             border-radius: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
+            position: relative;
+            img{
+                max-width: 100%;
+                height: 100%;
+            }
             button {
                 font-size: 18px;
                 color: $second-color;
-                background: rgba(0, 0, 0, 0.76);
+                background: rgba(0, 0, 0, 0.5);
                 border: 1px solid $accent-color;
                 box-sizing: border-box;
                 border-radius: 10px;
                 padding: 5% 10%;
+                position: absolute;
+                top:50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
             }
         }
     }
