fix:修正class about_agenda的background-image 路徑

--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -118,7 +118,7 @@
 
 .about_agenda {
     // background-image: url("/img/about/middle_2.png");
-    background-image: url("/img/about/abou_middleimg.png");
+    background-image: url("../img/about/abou_middleimg.png");
     background-size: cover;
     background-position: top center;
 
