feat:修正對話框高度跳動問題

--- a/src/sass/page/_c_back.scss
+++ b/src/sass/page/_c_back.scss
@@ -230,6 +230,7 @@ section.companyback_chat1 {
 //聊天版
 .companyback_back_chatbox {
     width: 666px;
+    height: 100%;
     padding: 30px;
     background-color: #0D0D0D;
     //    border: 2px solid sandybrown;
