feat: 修改現正直播頁面，新增判斷是否有session，無session不可以留言，並將session的值帶入留言者的姓名

--- a/src/sass/page/_live.scss
+++ b/src/sass/page/_live.scss
@@ -79,6 +79,10 @@
           text-align: center;
         }
       }
+      .live-login-block{
+        @include flex-box-center(30%, null);
+        height: calc(100% - 60px);
+      }
       // 顯示留言區塊
       .result-block {
         background-color: $black-color;
