feat:html中 index.news.tech的套件與結構/ tech.js中的company_info_id連結與新增按鈕以及未登入會被導回首頁/ php中的select.update.update2連結company_info_id

--- a/src/sass/page/_c_back_tech.scss
+++ b/src/sass/page/_c_back_tech.scss
@@ -152,10 +152,20 @@ $companyback_num2 : 2;
 
 //下方按鈕
 .companyback_add {
+    display: flex;
+    justify-content: space-between;
+    @include mobile(){
+        flex-direction: column;
+        flex-basis: 10vw;
+    }
     .btn_company_back {
         border: 1px solid rgba($accent-color, 0.5);
-        display: inline-block;
-        float: right;
+    }
+    .tech_addbtn {
+        @include mobile(){
+            margin: 0.5rem 4rem;
+        }
+
     }
 }
 
