--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -1,17 +1,17 @@
-<div class="pt-60">
-  <div class="nav" id="nav">
-    <a href="./index.html" class="logo" id="logo_main"><img src="img/tianlam-logo-blue.svg" alt="logo"
-        class="img"></img></a>
-    <a href="./index.html" class="logo logo-orange nav-company" id="logo_orange"><img src="img/tianlam-logo-orange.svg"
-        alt="logo" class="img"></img></a>
+<div class="pt-60" id="nav_app">
+  <div class="nav" id="nav" :class="{'bg-null': burger==true}">
+    <!-- <a href="./index.html" class="logo" id="logo_main"><img src="img/tianlam-logo-blue.svg" alt="logo"
+        class="img"></img></a> -->
+      <a href="./index.html" class="logo" :class="logo=='orange'? 'logo-orange nav-company':'logo_main'" :id="logo=='orange'? 'logo_orange':'logo_main'"><img
+        :src="['img/tianlam-logo' + logo + '.svg']" alt="logo" class="img"></img></a>
     <ul class="flex-box-end">
-      <li class="nav-name nav-login" id="nav_login"><a href="./index.html" class="logo_icon"><i
+      <li class="nav-name nav-login" id="nav_login" :class="{'login-icon-hide': companyBack2==false}"><a v-if="userHead" href="./index.html" class="logo_icon"><i
             class="fa-solid fa-user-check"></i></a>
         <p id="login_name">尚未登入</p>
       </li>
-      <li id="login_name_index"><a href="#" id="login_page_icon" class="logo_icon"><i class="fa-solid fa-user"></i></a></li>
-      <li>
-        <label for="checkbox" id="ham-icon" class="btn_switch">
+      <li id="login_name_index"><p id="login_page_icon2" v-if="loginPageIcon2"></p><a v-if="loginPageIcon" href="#" id="login_page_icon" class="logo_icon" @click="user1" ><i class="fa-solid fa-user"></i></a></li>
+      <li @click="ham">
+        <label for="checkbox" id="ham-icon" class="btn_switch" :class="{'open': burger==true}">
           <span></span>
           <span></span>
           <span></span>
@@ -20,12 +20,12 @@
       </li>
     </ul>
   </div>
-  <ul class="menu">
-    <li class="nav-company"><a href="companyback_info.html" class="accent-color">管理後台</a>
+  <ul class="menu" :class="{'menu-active': burger==true}">
+    <li class="nav-company" v-show="manageBack"><a href="companyback_info.html" class="accent-color">管理後台</a>
       <img class="now_page menu_img_back -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
     </li>
-    <li><a href="extend.html">虛擬商展</a>
-      <img class="now_page menu_img_extend -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
+    <li ><a href="extend.html">虛擬商展</a>
+      <img class="now_page menu_img_extend -hide" src="img/live/live_circle_2.svg" alt="圓形圖案" :class="">
     </li>
     <li><a href="live.html">現正直播</a>
       <img class="now_page menu_img_live -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
@@ -39,23 +39,17 @@
     <li><a href="contect.html">聯絡我們</a>
       <img class="now_page menu_img_contect -hide" src="img/live/live_circle_2.svg" alt="圓形圖案">
     </li>
-    <li class="nav-company" id="nav_logout"><a href="./index.html" class="accent-color">登出
+    <li class="nav-company" id="nav_logout" @click="clr_session" v-show="logOut"><a href="./index.html" class="accent-color">登出
         <img src="img/logout.svg" alt="logout" class="ml-6 logout"></img></a>
     </li>
 
   </ul>
-  <ul class="company-menu" id="company_menu">
+  <ul class="company-menu" id="company_menu" :class="{'company-menu-hide': companyBack==false}">
     <li id="companyBack_info"><a href="companyback_info.html"><img src="img/c_back/company_menu_1.svg"
           alt="廠商資料設定區"></a></li>
     <li id="companyBack_tech"><a href="companyback_tech.html"><img src="img/c_back/company_menu_2.svg" alt="技術展示區"></a>
     </li>
     <li id="companyBack"><a href="companyback.html"><img src="img/c_back/company_menu_3.svg" alt="直播申請區"></a></li>
   </ul>
-  <div id="menu-backdrop"></div>
+  <div id="menu-backdrop" :class="{'menu-backdrop': burger==true}" @click="ham"></div>
 </div>
-<script>
-  
-  document.querySelector('#login_name').textContent = sessionStorage.getItem('login_name');
-  // document.querySelector('.fa-user-check').style.display = "none";
-  // document.querySelector('#login_page_icon').textContent = sessionStorage.getItem('login_name');
-</script>
