--- a/src/sass/page/_c_back_info.scss
+++ b/src/sass/page/_c_back_info.scss
@@ -2,6 +2,8 @@
     padding: 30px;
 
     input[type='radio']:after {
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
         width: 25px;
         height: 25px;
         border-radius: 50%;
@@ -16,6 +18,8 @@
     }
 
     input[type='radio']:checked:after {
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
         width: 25px;
         height: 25px;
         border-radius: 50%;
