feat:tech的button bgc調整為黑色/index.scss的聚光燈time function修改/刪除tech多餘的html

--- a/src/sass/page/_c_back_tech.scss
+++ b/src/sass/page/_c_back_tech.scss
@@ -160,6 +160,7 @@ $companyback_num2 : 2;
     }
     .btn_company_back {
         border: 1px solid rgba($accent-color, 0.5);
+        background-color: $black-color;
     }
     .tech_addbtn {
         @include mobile(){
