--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -2,14 +2,14 @@
   <div class="nav" id="nav" :class="{'bg-null': burger==true}">
     <!-- <a href="./index.html" class="logo" id="logo_main"><img src="img/tianlam-logo-blue.svg" alt="logo"
         class="img"></img></a> -->
-      <a href="./index.html" class="logo" :class="logo=='orange'? 'logo-orange nav-company':'logo_main'" :id="logo=='orange'? 'logo_orange':'logo_main'"><img
-        :src="['img/tianlam-logo' + logo + '.svg']" alt="logo" class="img"></img></a>
+      <a href="./index.html" class="logo" :class="logo=='orange'? 'logo-orange nav-company':''" :id="logo=='orange'? 'logo_orange':'logo_main'"><img
+        :src="['img/tianlam-logo-' + logo + '.svg']" alt="logo" class="img"></img></a>
     <ul class="flex-box-end">
       <li class="nav-name nav-login" id="nav_login" :class="{'login-icon-hide': companyBack2==false}"><a v-if="userHead" href="./index.html" class="logo_icon"><i
             class="fa-solid fa-user-check"></i></a>
         <p id="login_name">尚未登入</p>
-      </li>
-      <li id="login_name_index"><p id="login_page_icon2" v-if="loginPageIcon2"></p><a v-if="loginPageIcon" href="#" id="login_page_icon" class="logo_icon" @click="user1" ><i class="fa-solid fa-user"></i></a></li>
+      </li>                                                                              
+      <li id="login_name_index"><p id="login_page_icon2" v-if="loginPageIcon2"></p><a v-show="loginPageIcon" href="#" id="login_page_icon" class="logo_icon" @click="user1" ><i class="fa-solid fa-user"></i></a></li>
       <li @click="ham">
         <label for="checkbox" id="ham-icon" class="btn_switch" :class="{'open': burger==true}">
           <span></span>
