feat:調整tech筆數上限為8/news標題的--線減少/tech btn hover設定效果

--- a/src/sass/page/_c_back_tech.scss
+++ b/src/sass/page/_c_back_tech.scss
@@ -166,6 +166,10 @@ $companyback_num2 : 2;
         @include mobile(){
             margin: 0.5rem 4rem;
         }
+        &:hover {
+            background-color: $accent-color;
+            color: $black-color;
+        }
 
     }
 }
