fix: 修補後台管理頁面側邊欄無法顯示右邊框問題

--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -43,10 +43,8 @@
 
   </ul>
   <ul class="company-menu" id="company_menu" :class="{'company-menu-hide': companyBack==false}">
-    <li id="companyBack_info"><a href="companyback_info.html"><img src="img/c_back/company_menu_1.svg"
-          alt="廠商資料設定區"></a></li>
-    <li id="companyBack_tech"><a href="companyback_tech.html"><img src="img/c_back/company_menu_2.svg" alt="技術展示區"></a>
-    </li>
+    <li id="companyBack_info"><a href="companyback_info.html"><img src="img/c_back/company_menu_1.svg"alt="廠商資料設定區"></a></li>
+    <li id="companyBack_tech"><a href="companyback_tech.html"><img src="img/c_back/company_menu_2.svg" alt="技術展示區"></a></li>
     <li id="companyBack"><a href="companyback.html"><img src="img/c_back/company_menu_3.svg" alt="直播申請區"></a></li>
   </ul>
   <div id="menu-backdrop" :class="{'menu-backdrop': burger==true}" @click="ham"></div>
