feat:調整index標題的文字為【Tián lám 2022 智慧全球科技展】，並設定手機板的max-width來調整斷句位置

--- a/src/sass/page/_index.scss
+++ b/src/sass/page/_index.scss
@@ -692,7 +692,7 @@
     .index_block{
         .index_title {
             margin-top: 20%;
-
+            max-width: 43vw;
             h1 {
                 font-size: 5.4vw;
                 text-align: center;
@@ -701,7 +701,7 @@
     }
 
     .index_title h1::after {
-        content: 'Tián lám 2022 智慧全球科技聚策展';
+        content: 'Tián lám 2022 智慧全球科技展';
         width: auto;
         color: transparent;
     }
