--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -170,6 +170,7 @@
 .about_speaker:hover {
     cursor: pointer;
     border: 1px solid #57fff5;
+    box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px #57fff5;
 }
 
 // 分三塊
