--- a/src/sass/page/_c_back_info.scss
+++ b/src/sass/page/_c_back_info.scss
@@ -4,6 +4,9 @@
     input[type='radio']:after {
         -webkit-border-radius: 50%;
         -moz-border-radius: 50%;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
         width: 25px;
         height: 25px;
         border-radius: 50%;
@@ -18,6 +21,9 @@
     }
 
     input[type='radio']:checked:after {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
         -webkit-border-radius: 50%;
         -moz-border-radius: 50%;
         width: 25px;
