--- a/src/sass/page/_c_back.scss
+++ b/src/sass/page/_c_back.scss
@@ -38,6 +38,17 @@
     flex-direction: row-reverse;
     //timepicker的input
     //年月日的input
+
+    &::after {
+        content: "";
+        width: 2vw;
+        height: 2vw;
+        @include absolute(42%, 2%);
+        background-image: url(../img/c_back/dropdown_arrow.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+
     .form-contril {
         @include input_Date();
         text-align: center;
@@ -64,6 +75,8 @@
         text-align: center;
         background-color: black;
         box-shadow: 0px 4px 4px rgba(0, 209, 255, 0.25);
+        @include relative();
+
     }
 }
 
@@ -543,6 +556,11 @@ section.companyback_chat1 {
             .time_tech {
                 padding-right: 4%;
 
+                &::after {
+                    @include absolute(42%, 6%);
+                }
+            
+
                 .form-contril {
                     width: 180px;
                 }
@@ -584,6 +602,9 @@ section.companyback_chat1 {
                 flex-direction: column-reverse;
                 align-items: flex-end;
 
+                &::after {
+                    @include absolute(43%, 6%);
+                }
 
                 .timepicker,
                 .form-contril {
@@ -659,6 +680,9 @@ section.companyback_chat1 {
 
             //下面兩個都是第一部分右半邊的input
             .time_tech {
+                &::after {
+                    @include absolute(69%, 32%);
+                }
 
                 .form-contril,
                 .timepicker {
@@ -824,6 +848,12 @@ section.companyback_chat1 {
             .label-before {
                 font-size: 10px;
             }
+            .time_tech {
+                &::after {
+                    @include absolute(70%, 23%);
+                }
+            }
+        
         }
 
         .companyback_chated {
@@ -834,6 +864,7 @@ section.companyback_chat1 {
             }
         }
     }
+
 
     .btn-short {
         padding: 1% 3%;
