fix: 修正後台[直播時段]提示文字錯誤、[現正直播]顯示廠商名稱錯誤問題

--- a/src/sass/page/_news.scss
+++ b/src/sass/page/_news.scss
@@ -12,9 +12,11 @@
         }
       }
       @include pad(768px) {
+        margin-left: 10px;
         font-size: 20px;
       }
       @include mobile(375px) {
+        margin-left: 10px;
         font-size: 14px;
       }
     }
