--- a/src/sass/page/_c_back.scss
+++ b/src/sass/page/_c_back.scss
@@ -130,11 +130,15 @@
 //第二層(留言板表頭)
 .chatboard {
     padding-top: 160px;
+    .title_skill{
+        margin-bottom: 40px;
+    }
 }
 
 // 搜尋欄
 .companyback_search {
     .companyback_searchinput {
+        margin-bottom:33px;
         background: #0D0D0D;
         color: $second-color;
         box-shadow: 0px 4px 4px rgba(0, 209, 255, 0.25);
@@ -245,6 +249,7 @@ section.companyback_chat1 {
 
 //聊天版
 .companyback_back_chatbox {
+    margin-top: 3px;
     width: 666px;
     height: 100%;
     padding: 30px;
